--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,8 +30,8 @@ body {
 #screen {
     overflow: hidden;
     font-family: 'digital-7';
-    font-size: 40px;
-    line-height: 50px;
+    font-size: 2.5em;
+    line-height: 1.25;
     color: darken($cal-color, 17%);
     text-align: right;
     padding: 0 12px 0 4px;
@@ -48,8 +48,8 @@ body {
 
 .calc-btn {
     color: darken($cal-color, 17%);
-    font-size: 18px;
-    line-height: 40px;
+    font-size: 1.1em;
+    line-height: 2.3;
     font-weight: 400;
     text-align: center;
     vertical-align: middle;
@@ -80,4 +80,4 @@ body {
      float: left;
      width: 189px;
 }
-.btn-long { height: 92px; line-height: 92px}
+.btn-long { height: 92px; line-height: 5.2}
